Adds some structure in Related Works

--- a/egbib.bib
+++ b/egbib.bib
@@ -1,5 +1,20 @@
 @comment{x-kbibtex-personnameformatting=<%l><, %f>}
 
+@inproceedings{Xie2015,
+	articleno = "127",
+	author = "Stent, Simon and Gherardi, Riccardo and Stenger, Bj{\"o}rn and Cipolla, Roberto",
+	booktitle = "{Proceedings of the British Machine Vision Conference (BMVC)}",
+	doi = "10.5244/C.29.127",
+	editor = "{Xianghua Xie}, Mark W. Jones and Tam, Gary K. L.",
+	isbn = "1-901725-53-7",
+	month = "September",
+	numpages = "12",
+	pages = "127.1--127.12",
+	publisher = "BMVA Press",
+	title = "{Detecting Change for Multi-View, Long-Term Surface Inspection}",
+	year = "2015"
+}
+
 @inproceedings{Reyes2015,
 	added-at = "2015-09-03T00:00:00.000+0200",
 	author = "Reyes, Angie K. and Caicedo, Juan C. and Camargo, Jorge E.",
@@ -52,54 +67,118 @@
 }
 
 @inproceedings{conf/accv/PfisterSCZ14,
-  added-at = {2015-04-16T00:00:00.000+0200},
-  author = {Pfister, Tomas and Simonyan, Karen and Charles, James and Zisserman, Andrew},
-  biburl = {http://www.bibsonomy.org/bibtex/2594a6e5cccf97052343ebdb4793d9855/dblp},
-  booktitle = {ACCV (1)},
-  editor = {Cremers, Daniel and ReidZ, Ian D. and Saito, Hideo and Yang, Ming-Hsuan},
-  ee = "http://dx.doi.org/10.1007/978-3-319-16865-4_35",
-  interhash = {b5fefb6d612dd17851219fd8f6633d4a},
-  intrahash = {594a6e5cccf97052343ebdb4793d9855},
-  isbn = {978-3-319-16864-7},
-  keywords = {dblp},
-  pages = "538--552",
-  publisher = "Springer",
-  series = {Lecture Notes in Computer Science},
-  timestamp = "2015-09-15T11:35:50.000+0200",
-  title = "{Deep Convolutional Neural Networks for Efficient Pose Estimation in Gesture Videos.}",
-  volume = 9003,
-  year = 2014
+	added-at = "2015-04-16T00:00:00.000+0200",
+	author = "Pfister, Tomas and Simonyan, Karen and Charles, James and Zisserman, Andrew",
+	biburl = "http://www.bibsonomy.org/bibtex/2594a6e5cccf97052343ebdb4793d9855/dblp",
+	booktitle = "{ACCV (1)}",
+	editor = "Cremers, Daniel and ReidZ, Ian D. and Saito, Hideo and Yang, Ming-Hsuan",
+	ee = "http://dx.doi.org/10.1007/978-3-319-16865-4_35",
+	interhash = "b5fefb6d612dd17851219fd8f6633d4a",
+	intrahash = "594a6e5cccf97052343ebdb4793d9855",
+	isbn = "978-3-319-16864-7",
+	keywords = "dblp",
+	pages = "538--552",
+	publisher = "Springer",
+	series = "{Lecture Notes in Computer Science}",
+	timestamp = "2015-09-15T11:35:50.000+0200",
+	title = "{Deep Convolutional Neural Networks for Efficient Pose Estimation in Gesture Videos.}",
+	volume = 9003,
+	year = 2014
 }
 
 @incollection{NIPS2012_4824,
-title = {ImageNet Classification with Deep Convolutional Neural Networks},
-author = {Alex Krizhevsky and Sutskever, Ilya and Geoffrey E. Hinton},
-booktitle = {Advances in Neural Information Processing Systems 25},
-editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
-pages = {1097--1105},
-year = {2012},
-publisher = {Curran Associates, Inc.},
-url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
+	author = "Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E.",
+	booktitle = "{Advances in Neural Information Processing Systems 25}",
+	editor = "Pereira, F. and Burges, C. J. C. and Bottou, L. and Weinberger, K. Q.",
+	pages = "1097--1105",
+	publisher = "Curran Associates, Inc.",
+	title = "{ImageNet Classification with Deep Convolutional Neural Networks}",
+	year = "2012"
 }
 
-@Article{Simonyan14c,
-    author       = "Simonyan, K. and Zisserman, A.",
-    title        = "Very Deep Convolutional Networks for Large-Scale Image Recognition",
-    journal      = "CoRR",
-    volume       = "abs/1409.1556",
-    year         = "2014"
+@article{Simonyan14c,
+	author = "Simonyan, K. and Zisserman, A.",
+	journal = "CoRR",
+	title = "{Very Deep Convolutional Networks for Large-Scale Image Recognition}",
+	volume = "abs/1409.1556",
+	year = "2014"
 }
 
 @article{ginosar2015century,
-  title={A Century of Portraits: A Visual Historical Record of American High School Yearbooks},
-  author={Ginosar, Shiry and Rakelly, Kate and Sachs, Sarah and Yin, Brian and Efros, Alexei A},
-  journal={arXiv preprint arXiv:1511.02575},
-  year={2015}
-} 
+	author = "Ginosar, S. and Rakelly, K. and Sachs, S. and Yin, B. and Efros, A.",
+	journal = "arXiv preprint arXiv:1511.02575",
+	title = "{A Century of Portraits: A Visual Historical Record of American High School Yearbooks}",
+	year = "2015"
+}
 
 @article{jia2014caffe,
-  Author = {Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor},
-  Journal = {arXiv preprint arXiv:1408.5093},
-  Title = {Caffe: Convolutional Architecture for Fast Feature Embedding},
-  Year = {2014}
-}t
+	author = "Jia, Y. and Shelhamer, E. and Donahue, J. and Karayev, S. and Long, J. and Girshick, R. and Guadarrama, S. and Darrell, T.",
+	journal = "arXiv preprint arXiv:1408.5093",
+	title = "{Caffe: Convolutional Architecture for Fast Feature Embedding}",
+	year = "2014"
+}
+
+@inproceedings{Griffith2015,
+	added-at = "2016-04-26T00:00:00.000+0200",
+	author = "Griffith, S. and Pradalier, C.",
+	booktitle = "{Field and Service Robotics}",
+	editor = "Wettergreen, David and Barfoot, Timothy D.",
+	interhash = "1d4b358c5a40b736a18ab7bd8bf2a7e0",
+	intrahash = "627d38e8b43b71afa004c7b1c50572d6",
+	isbn = "978-3-319-27700-4",
+	keywords = "dblp",
+	pages = "3--16",
+	publisher = "Springer",
+	series = "{Springer Tracts in Advanced Robotics}",
+	timestamp = "2016-04-27T11:39:15.000+0200",
+	title = "{A Spatially and Temporally Scalable Approach for Long-Term Lakeshore Monitoring.}",
+	volume = 113,
+	year = 2015
+}
+
+
+
+@InProceedings{Griffith2014,
+  author = 	 {Griffith, S. and Drews, P. and Pradalier, C.},
+  title = 	 {Towards  autonomous lakeshore monitoring},
+  OPTcrossref =  {},
+  OPTkey = 	 {},
+  booktitle = {ISER},
+  year = 	 {2014},
+  OPTeditor = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  OPTseries = 	 {},
+  OPTpages = 	 {},
+  OPTmonth = 	 {},
+  OPTaddress = 	 {},
+  OPTorganization = {},
+  OPTpublisher = {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+@InProceedings{Griffith2015b,
+  author = 	 {Griffith, S. and Dellaert, F. and Pradalier, C.},
+  title = 	 {Robot-Enabled Lakeshore Monitoring Using Visual SLAM and SIFT Flow},
+  OPTcrossref =  {},
+  OPTkey = 	 {},
+  booktitle = {RSS Workshop on Multi-View Geometry in Robotics},
+  year = 	 {2015},
+  OPTeditor = 	 {},
+  OPTvolume = 	 {},
+  OPTnumber = 	 {},
+  OPTseries = 	 {},
+  OPTpages = 	 {},
+  OPTmonth = 	 {},
+  OPTaddress = 	 {},
+  OPTorganization = {},
+  OPTpublisher = {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
+}
+
+@Comment Shane   Griffith,   Frank   Dellaert,   and   Cedric   Pradalier.
+@Comment Robot-Enabled Lakeshore Monitoring Using Visual SLAM and SIFT Flow. In
+@Comment RSS Workshop on Multi-View Geometry in Robotics
+@Comment , 2015
