Corrected bib db

--- a/bmvc_dl_seasonal.tex
+++ b/bmvc_dl_seasonal.tex
@@ -2,9 +2,9 @@
 %\usepackage{array}
 
 %% Enter your paper number here for the review copy
-%\bmvcreviewcopy{??}
+\bmvcreviewcopy{??}
 
-\title{A Benchmark on Deep-Learning Convolutional Neural Network for the\\
+\title{Convolutional Neural Network for the\\
 Representation of Natural Scenes with Large Seasonal Variations}
 
 % Enter the paper's authors in order
@@ -70,5 +70,5 @@ Representation of Natural Scenes with Large Seasonal Variations}
 
 %------------------------------------------------------------------------- 
 
-\bibliography{egbib,lecun}
+\bibliography{egbib,lecun,bmvc2016,jfr}
 \end{document}
