--- a/stateoftheart.tex
+++ b/stateoftheart.tex
@@ -14,7 +14,7 @@
 
 It is becoming well known that the traditional approach to data association, i.e., point--based feature matching, is unreliable in unstructured environments. It is more applicable the more structured an environment is. Point--based features can be associated well indoors, but special care has to be taken as they are applied in urban environments (e.g., street-view) ~\cite{beall2014, stumm2013}. They lose representational power as the environment changes with night~\cite{nelson2015}, rain~\cite{cord2014}, and shadows~\cite{corke2013}. This means that in some natural environments, like lakeshores, point--based feature matching is sporadic even among images from the same survey, and is unreliable between different surveys~\cite{griffith2014iser}. 
 
-The lack of a dominant method for data association in outdoor environments has led to a number of new approaches. All of them function using some form of information beyond the capabilities of point--based features. Image sequence~\cite{milford2012seqslam, cummins2008fab, milford2004, churchill2013, naseer2015}, image patch~\cite{mcmanus2014, sunderhauf2015}, and whole image~\cite{arroyo2015, neubert2015superpixel} techniques are becoming increasingly dependable. There are, however, still shortcomings among them. A common limitation is robustness to changes in viewpoint among some sequence and whole-image based approaches. This may not be a factor in monitoring applications, however, since surveys are captured from similar trajectories; the viewpoint and the scale are relatively stable between images (see e.g.,~\cite{milford2014}).
+The lack of a dominant method for data association in outdoor environments has led to a number of new approaches. All of them function using some form of information beyond the capabilities of point--based features. Image sequence~\cite{milford2012seqslam, cummins2008fab, milford2004, churchill2013, naseer2015}, image patch~\cite{mcmanus2014, Sunderhauf2015}, and whole image~\cite{arroyo2015, neubert2015superpixel} techniques are becoming increasingly dependable. There are, however, still shortcomings among them. A common limitation is robustness to changes in viewpoint among some sequence and whole-image based approaches. This may not be a factor in monitoring applications, however, since surveys are captured from similar trajectories; the viewpoint and the scale are relatively stable between images (see e.g.,~\cite{milford2014}).
 
 
 Parler de change detection across seasons \cite{Neubert2013}, de lake shore monitoring \cite{Griffith2015,Griffith2015b,Griffith2014}\\
