adds one ref for viewpoint estimation with CNN

--- a/egbib.bib
+++ b/egbib.bib
@@ -178,7 +178,13 @@
   OPTannote = 	 {}
 }
 
-@Comment Shane   Griffith,   Frank   Dellaert,   and   Cedric   Pradalier.
-@Comment Robot-Enabled Lakeshore Monitoring Using Visual SLAM and SIFT Flow. In
-@Comment RSS Workshop on Multi-View Geometry in Robotics
-@Comment , 2015
+
+@InProceedings{Su2015,
+    Title={Render for CNN: Viewpoint Estimation in Images Using CNNs Trained with Rendered 3D Model Views},
+    Author={Su, Hao and Qi, Charles R. and Li, Yangyan and Guibas, Leonidas J.},
+    Booktitle={The IEEE International Conference on Computer Vision (ICCV)},
+    month = {December},
+    Year= {2015}
+}
+
+
