--- a/stateoftheart.tex
+++ b/stateoftheart.tex
@@ -14,11 +14,8 @@
 
 It is becoming well known that the traditional approach to data association, i.e., point--based feature matching, is unreliable in unstructured environments. It is more applicable the more structured an environment is. Point--based features can be associated well indoors, but special care has to be taken as they are applied in urban environments (e.g., street-view) ~\cite{beall2014, stumm2013}. They lose representational power as the environment changes with night~\cite{nelson2015}, rain~\cite{cord2014}, and shadows~\cite{corke2013}. This means that in some natural environments, like lakeshores, point--based feature matching is sporadic even among images from the same survey, and is unreliable between different surveys~\cite{griffith2014iser}. 
 
-The lack of a dominant method for data association in outdoor environments has led to a number of new approaches. All of them function using some form of information beyond the capabilities of point--based features. Image sequence~\cite{milford2012seqslam, cummins2008fab, milford2004, churchill2013, naseer2015}, image patch~\cite{mcmanus2014, sunderhauf2015}, and whole image~\cite{arroyo2015, neubert2015superpixel} techniques are becoming increasingly dependable. There are, however, still shortcomings among them. A common limitation is robustness to changes in viewpoint among some sequence and whole-image based approaches. This may not be a factor in monitoring applications, however, since surveys are captured from similar trajectories; the viewpoint and the scale are relatively stable between images (see e.g.,~\cite{milford2014}).
+The lack of a dominant method for data association in outdoor environments has led to a number of new approaches. All of them function using some form of information beyond the capabilities of point--based features. Image sequence~\cite{milford2012seqslam, cummins2008fab, milford2004, churchill2013, naseer2015}, image patch~\cite{mcmanus2014, Sunderhauf2015}, and whole image~\cite{arroyo2015, neubert2015superpixel} techniques are becoming increasingly dependable. There are, however, still shortcomings among them. A common limitation is robustness to changes in viewpoint among some sequence and whole-image based approaches. This may not be a factor in monitoring applications, however, since surveys are captured from similar trajectories; the viewpoint and the scale are relatively stable between images (see e.g.,~\cite{milford2014}).
+
+In the recent years, deep neural networks are becoming very popular methods for solving both classification and regression problems because technical difficulties related to their training have been overcome. In the context of image analysis, convolutional neural networks have been around for several decades because they benefit from inherent regularities in image to constrain the trained architecture and their archictecture regularize more general deep neural networks. In the recent years, state of the art performances were achieved with deep convolutional neural networks on various machine learning tasks in the context of computer vision \cite{NIPS2012_4824,Simonyan14c}. Of particular interest for our study, deep convolutional neural networks have been successfully applied to place recognition \cite{Sunderhauf2015} (a classification task), pose regression \cite{conf/accv/PfisterSCZ14} and viewpoint estimation \cite{Su2015}.
 
 
-Parler de change detection across seasons \cite{Neubert2013}, de lake shore monitoring \cite{Griffith2015,Griffith2015b,Griffith2014}\\
-
-Transition sur l'impact des convolutifs \cite{farabet-pami-13} et deep convolutif net pour l'analyse d'image \cite{NIPS2012_4824,Simonyan14c}, essentiellement sur de la classification mais un peu pour la régression.\\
-
-Parler de deep nets pour la reconnaissance de lieu \cite{Sunderhauf2015} et de plantes \cite{Reyes2015}. Et de deepnet pour la régression de pose \cite{conf/accv/PfisterSCZ14}.\\
