added references to some rw

--- a/egbib.bib
+++ b/egbib.bib
@@ -1,5 +1,145 @@
 @comment{x-kbibtex-personnameformatting=<%l><, %f>}
 
+
+@conference {beall2014,
+	title = {Appearance-based Localization across Seasons in a {M}etric {M}ap},
+	booktitle = {6th PPNIV},
+	year = {2014},
+	month = {September},
+	address = {Chicago, USA},
+	author = {Chris Beall and Frank Dellaert}
+}
+
+@inproceedings{stumm2013,
+  title={Probabilistic place recognition with covisibility maps},
+  author={Stumm, Elena and Mei, Christopher and Lacroix, Simon},
+  booktitle={Intelligent Robots and Systems (IROS)},
+  pages={4158--4163},
+  year={2013},
+  organization={IEEE}
+}
+
+@inproceedings{milford2012seqslam,
+  title={SeqSLAM: Visual route-based navigation for sunny summer days and stormy winter nights},
+  author={Milford, Michael J and Wyeth, Gordon F},
+  booktitle={Robotics and Automation (ICRA), 2012 IEEE International Conference on},
+  pages={1643--1649},
+  year={2012},
+  organization={IEEE}
+}
+
+@article{cummins2008fab,
+  title={FAB-MAP: Probabilistic localization and mapping in the space of appearance},
+  author={Cummins, Mark and Newman, Paul},
+  journal={The International Journal of Robotics Research},
+  volume={27},
+  number={6},
+  pages={647--665},
+  year={2008},
+  publisher={SAGE Publications}
+}
+
+@inproceedings{milford2004,
+  title={RatSLAM: a hippocampal model for simultaneous localization and mapping},
+  author={Milford, Michael J and Wyeth, Gordon F and Rasser, DF},
+  booktitle={Robotics and Automation, 2004. Proceedings. ICRA'04. 2004 IEEE International Conference on},
+  volume={1},
+  pages={403--408},
+  year={2004},
+  organization={IEEE}
+}
+
+@article{churchill2013,
+  title={Experience-based navigation for long-term localisation},
+  author={Churchill, Winston and Newman, Paul},
+  journal={IJRR},
+  volume={32},
+  number={14},
+  pages={1645--1661},
+  year={2013},
+  publisher={SAGE Publications}
+}
+
+@inproceedings{naseer2015,
+  title={Robust Visual SLAM Across Seasons},
+  author={Naseer, Tayyab and Ruhnke, Michael and Stachniss, Cyrill and Spinello, Luciano and Burgard, Wolfram},
+  booktitle={IROS},
+  year={2015}
+}
+
+@INPROCEEDINGS{mcmanus2014, 
+    AUTHOR    = {Colin McManus AND Ben Upcroft AND Paul Newman}, 
+    TITLE     = {Scene Signatures: {L}ocalized and Point-less Features for Localization}, 
+    BOOKTITLE = {RSS}, 
+    YEAR      = {2014}, 
+    ADDRESS   = {Berkeley, USA}, 
+    MONTH     = {July} 
+}
+
+@article{sunderhauf2015,
+  title={Place recognition with {ConvNet} landmarks: {V}iewpoint-robust, condition-robust, training-free},
+  author={Sunderhauf, Niko and Shirazi, Sareh and Jacobson, Adam and Dayoub, Feras and Pepperell, Edward and Upcroft, Ben and Milford, Michael},
+  journal={Proceedings of Robotics: Science and Systems XII},
+  year={2015}
+}
+
+@inproceedings{arroyo2015,
+  title={Towards life-long visual localization using an efficient matching of binary sequences from images},
+  author={Arroyo, Roberto and Alcantarilla, Pablo F and Bergasa, Luis M and Romera, Eduardo},
+  booktitle={Robotics and Automation (ICRA), 2015 IEEE International Conference on},
+  pages={6328--6335},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{neubert2015superpixel,
+  title={Superpixel-based appearance change prediction for long-term navigation across seasons},
+  author={Neubert, Peer and S{\"u}nderhauf, Niko and Protzel, Peter},
+  journal={Robotics and Autonomous Systems},
+  volume={69},
+  pages={15--27},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@inproceedings{milford2014,
+  title={Automated sensory data alignment for environmental and epidermal change monitoring},
+  author={Milford, Michael and Firn, Jennifer and Beattie, James and Jacobson, Adam and Pepperell, Edward and Mason, Eugene and Kimlin, Michael and Dunbabin, Matthew},
+  booktitle={Australasian Conference on Robotics and Automation 2014},
+  pages={1--10},
+  year={2014},
+  organization={Australian Robotic and Automation Association}
+}
+
+@inproceedings{nelson2015,
+  title={{From Dusk till Dawn: Localisation at Night using Artificial Light Sources}},
+  author={Peter Nelson and Winston Churchill and Ingmar Posner and Paul Newman},
+  booktitle={ICRA},
+  year={2015},
+}
+
+@article{cord2014,
+  title={Detecting Unfocused Raindrops: In-Vehicle Multipurpose Cameras},
+  author={Cord, Aur{\'e}lien and Gimonet, Nicolas},
+  journal={Robotics \& Automation Magazine, IEEE},
+  volume={21},
+  number={1},
+  pages={49--56},
+  year={2014},
+  publisher={IEEE}
+}
+
+@inproceedings{corke2013,
+  title={Dealing with shadows: {C}apturing intrinsic scene appearance for image-based outdoor localization},
+  author={Corke, Peter and Paul, Rohan and Churchill, Winston and Newman, Paul},
+  booktitle={IROS},
+  pages={2085--2092},
+  year={2013},
+  organization={IEEE}
+}
+
+
+
 @inproceedings{Xie2015,
 	articleno = "127",
 	author = "Stent, Simon and Gherardi, Riccardo and Stenger, Bj{\"o}rn and Cipolla, Roberto",
