Corrected bib entries

--- a/bmvc_dl_seasonal.tex
+++ b/bmvc_dl_seasonal.tex
@@ -70,5 +70,5 @@ Representation of Natural Scenes with Large Seasonal Variations}
 
 %------------------------------------------------------------------------- 
 
-\bibliography{egbib,lecun,bmvc2016,jfr}
+\bibliography{egbib,lecun,jfr}
 \end{document}
