--- a/egbib.bib
+++ b/egbib.bib
@@ -76,7 +76,7 @@
     MONTH     = {July} 
 }
 
-@article{sunderhauf2015,
+@article{sunderhauf2015a,
   title={Place recognition with {ConvNet} landmarks: {V}iewpoint-robust, condition-robust, training-free},
   author={Sunderhauf, Niko and Shirazi, Sareh and Jacobson, Adam and Dayoub, Feras and Pepperell, Edward and Upcroft, Ben and Milford, Michael},
   journal={Proceedings of Robotics: Science and Systems XII},
@@ -174,7 +174,7 @@
 	year = 2015
 }
 
-@article{Sunderhauf2015,
+@article{Sunderhauf2015b,
 	added-at = "2015-02-02T00:00:00.000+0100",
 	author = "S{\"u}nderhauf, Niko and Dayoub, Feras and Shirazi, Sareh and Upcroft, Ben and Milford, Michael",
 	interhash = "e17ad10d245abaa50794c745c03ec220",
