--- a/jfr.bib
+++ b/jfr.bib
@@ -493,3 +493,10 @@ year = {2000}
   organization={IEEE}
 }
 
+@inproceedings{griffith2014iser,
+  title={Towards Autonomous Lakeshore Monitoring},
+  author={Griffith, Shane and Drews, Paul and Pradalier, C{\'e}dric},
+  year={2014},
+  booktitle={International Symposium on Experimental Robotics (ISER)}
+}
+
