Improvement of figure 6.

--- a/results-regression.tex
+++ b/results-regression.tex
@@ -50,11 +50,11 @@ The best results in term of generalization and precision of the prediction were 
 
 \begin{figure}[htb]
 \centering
-\begin{tabular}{cc}
-    a) Map of predicted positions&
-    b) Map of original labels\\
-    \bmvaHangBox{\includegraphics[width=0.25\textwidth]{images/regression/lake_prediction}}&
-    \bmvaHangBox{\includegraphics[width=0.18\textwidth]{images/regression/lake}}\\
+\begin{tabular}{p{0.3\textwidth}cp{0.3\textwidth}}
+    a) Overhead map image with a sample boat path & ~ &
+    b) Map of original and predicted labels\\
+    \bmvaHangBox{\includegraphics[height=0.4\textwidth]{images/lac}}& &
+    \bmvaHangBox{\includegraphics[height=0.4\textwidth]{images/regression/lake_prediction}}\\
 \end{tabular}
 \caption{Map of predicted positions and original labels}
 \label{map}
