--- a/results-regression.tex
+++ b/results-regression.tex
@@ -46,7 +46,7 @@ The last approach was used on the first approach configuration. It was observed 
 \label{3appfilter}
 \end{figure}
 
-The best results in term of generalization and precision of the prediction were achieved with the second approach. After 148000 iterations, the prediction errors are centered Gaussian-like distributions with a standard deviation of 12.4 meters on X and 20.6 meters on Y. Considering that performing this operation with the human brain is found to be challenging for image from a natural environment, the resulting precision is very acceptable. The labels were displayed to be compared to the predicted positions (fig.~\ref{map}.a). The red and green dots represent the original labels and the blue and purple dots represent the predicted labels.
+The best results in term of generalization and precision of the prediction were achieved with the second approach. After 148000 iterations, the prediction errors are centered Gaussian-like distributions with a standard deviation of 12.4 meters on X and 20.6 meters on Y. Considering that performing this operation with the human brain is found to be challenging for image from a natural environment, the resulting precision is very acceptable. The labels were displayed to be compared to the predicted positions (fig.~\ref{map}.a). The red and green dots represent the original labels and the blue and purple dots represent the predicted labels. The error between X and Y coordinates of the predicted and original labels was also plotted on fig.~\ref{errormap} and was found to be centered on the origin.
 
 \begin{figure}[htb]
 \centering
@@ -59,4 +59,13 @@ The best results in term of generalization and precision of the prediction were 
 \caption{Map of predicted positions and original labels}
 \label{map}
 \label{lake}
+\end{figure}
+
+\begin{figure}[htb]
+\centering
+\begin{tabular}{p{0.3\textwidth}cp{0.3\textwidth}}
+    \bmvaHangBox{\includegraphics[height=0.3\textwidth]{images/regression/error}}\\
+\end{tabular}
+\caption{Error between X and Y coordinates of predicted and original labels}
+\label{errormap}
 \end{figure}
