--- a/introduction.tex
+++ b/introduction.tex
@@ -42,7 +42,7 @@ stages. In a first stage, we evaluate the ability of a CNN to recognize a place
 independently of the seasonal and lighting changes. This problem is framed as a
 classification task where each class is a location around our lake shore and a
 standard network structure can be used. In a
-second stage, we now conside a CNN trained to predict the pose (or view point)
+second stage, we now consider a CNN trained to predict the pose (or view point)
 of the camera (2D position and heading) using an adapted network structure
 suitable for a regression task. Finally, in a third stage, we evaluate the
 quality of the internal representation learnt by the convolutional layers of
