--- a/methodology-classification.tex
+++ b/methodology-classification.tex
@@ -1,8 +1,8 @@
 \subsection{Classification}
 
-One of the major challenge of classification is to properly define classes. We choose to discretize the position into 2,5-meters square. Since the heading is not constant during navigation and can vary a lot without positional change, we also included the orientation of the camera with 10 degrees increments. The objective is to ensure that the images are consistent within each class to limit unnecessary noise during training. 
+One of the major challenges of classification is to properly define classes. We chose to discretize the position into 2,5-meters square. Since the heading is not constant during navigation and can vary a lot without positional change, we also included the orientation of the camera with 10 degrees increments. The objective is to ensure that the images are consistent within each class to limit unnecessary noise during training. 
 
-This representation of the possible position of the robot is very sparse so to improve the efficency of the training, we will limit the number of classes studied. We also need to avoid having a class too strong against the other during the training, our choice is to keep only the classes that have a number of images of at least 50\% of the highest class image count. For our database, this represents around 1000 images per class with 295 classes giving us 300 000 images in total.
+This representation of robot poses is very sparse, so to improve the efficency of the training, we will limit the number of classes studied. We also need to avoid having a class too strong against the other during the training, our choice is to keep only the classes that have a number of images of at least 50\% of the highest class image count. For our database, this represents around 1000 images per class with 295 classes giving us 300 000 images in total.
 
 We train an implementation of AlexNet on Caffe. We chose Caffe over other deep learning framework because it was easy to use especially for a classification task. AlexNet is a recognized network used for classification. We didn't change the network structure but since we train it from scratch we tuned the number of images used, the size of the mini-batches and the learning rate. We had to find a trade-off between learning time and precision. We used smaller dataset to test the training and to tune those parameters.
 
