Adjustments in methodology-regrression

--- a/methodology-regression.tex
+++ b/methodology-regression.tex
@@ -1,6 +1,6 @@
 \subsection{Regression}
-The goal of the regression task is to compute the GPS position corresponding to an image of a given place. This image is completely described by the position of the camera and its orientation. Directly using the position and orientation of the camera as labels would have resulted in inhomogeneous labels. Consequently, it was chosen to use a 4-dimension vector. Two dimensions represent the position of the camera and the other two represent the position of the side of the lake seen in the image. To ensure convergence the labels were normalized and re-centered. We will refer to the computed scaling factor as \textit{scale} in the following Results section.
+The goal of the regression task is to compute the GPS position corresponding to an image of a given place. This image is completely described by the position of the camera and its orientation. Directly using the position and orientation of the camera as labels would have resulted in inhomogeneous labels. Consequently, it was chosen to use a 4-dimension vector. The first two dimensions are the GPS coordinates of the camera and the other two are the coordinates of the projection on the side of the lake in the direction of the view. To ensure convergence the labels were normalized and re-centered. We will refer to the computed scaling factor as \textit{scale} in the following Results section.
 
 For comparison matters the same Network CaffeNet was used for the regression task. Yet some changes were made on the loss layer which previously used the SoftMax function. It was chosen to use the euclidean loss function in this case where the labels are distances. The creation of the dataset is similar to the one performed for the classification.
 
-The implementation was done with Caffe after some modification so it could deal with real value labels and multi-label regression.
+The implementation was done with Caffe after some modifications so it could deal with real value labels and multi-label regression.
