--- a/bmvc_dl_seasonal.tex
+++ b/bmvc_dl_seasonal.tex
@@ -48,6 +48,10 @@ Representation of Natural Scenes with Large Seasonal Variations}
 \def\Eg{\emph{E.g}\bmvaOneDot}
 \def\etal{\emph{et al}\bmvaOneDot}
 
+%%%%%
+\usepackage{color}
+\newcommand{\todo}[1]{\textcolor{red}{\textbf{#1}}}
+
 %------------------------------------------------------------------------- 
 % Document starts here
 \begin{document}
